--- a/aula004/ex001.html
+++ b/aula004/ex001.html
@@ -21,9 +21,9 @@
     <p> Colossenses 3:17</p>
     <script>
         
-        window.alert('Minha primeira mensagem!')
-        window.confirm('EStá gostando de JS?')
-        window.prompt('Qual seu nome?')
+        //window.alert('Minha primeira mensagem!')
+        //window.confirm('EStá gostando de JS?')
+        //window.prompt('Qual seu nome?')
         
     </script>
 </body>
