--- a/aula006/dinheirinho.html
+++ b/aula006/dinheirinho.html
@@ -27,7 +27,7 @@
             continue
         }
         
-        var sal = salario.toFixed(2).replace('.', ',')
+        //var sal = salario.toFixed(2).replace('.', ',')
         var sal = salario.toLocaleString('pt-BR', {style: 'currency', currency: 'BRL'})
         
 
