--- a/aula010/ex006.html
+++ b/aula010/ex006.html
@@ -8,7 +8,7 @@
     <style>
         div#area {
             font: normal 18pt Arial;
-            background-color: rgb(31, 122, 51);
+            background-color: green;
             color: white;
             width: 200px;
             height: 200px;
@@ -37,13 +37,13 @@
         function entrar() {
 
             a.innerText = 'Entrou!'
-            a.style.background = 'green'
+            a.style.background = 'blue'
         }
 
         function sair() {
 
             a.innerText = 'Saiu!'
-            a.style.background = 'blue'
+            a.style.background = 'green'
         }
 
     </script>   
